<resources>
    <string name="app_name">IOU</string>
    <string name="title_main">IOU</string>
    <string name="shortcut_label">Quick Action</string>
    <string name="widget_quick_add_title">IOU - Quick add</string>
    <string name="widget_balance_title">IOU - Balances</string>
    <string name="dash_user_new">New Friend</string>
    <string name="dash_user_new_payment">New Payment</string>
    <string name="dash_user_view_all">All Friends</string>
    <string name="dash_group_new">New Group</string>
    <string name="dash_group_new_payment">New Payment</string>
    <string name="dash_group_view_all">All Groups</string>
    <string name="notification_user_owed">You owe</string>
    <string name="notification_owed_user">owes you</string>
    <string name="notification_title">Reminder Set</string>
    <string name="et_user_name_hint">Name</string>
    <string name="et_payment_description_hint">Description</string>
    <string name="et_payment_amount_hint">Amount</string>
    <string name="et_payment_title_hint">Title</string>
    <string name="et_payment_date_hint">Date</string>
    <string name="et_variable_name_hint">Variable Name</string>
    <string name="et_group_title_hint">Title</string>
    <string name="et_group_description_hint">Description</string>
    <string name="tv_payment_description">Description:</string>
    <string name="tv_payment_amount">Amount:</string>
    <string name="tv_no_users">You havent added any friends</string>
    <string name="tv_no_payments">There are no payments</string>
    <string name="tv_no_groups">There are no groups</string>
    <string name="tv_no_target">None Selected</string>
    <string name="tv_total_user_owed">You owe</string>
    <string name="tv_total_owed_user">Owed to you</string>
    <string name="tv_total_all_square">All Square</string>
    <string name="tv_total_title">Total:</string>
    <string name="tv_total_title_per_user">Total per friend:</string>
    <string name="date_title">Date:</string>
    <string name="description_title">Description:</string>
    <string name="tv_display_with_minimalistic_text_title">Minimalistic Text Support</string>
    <string name="tv_variable_name">Variable Name (Must not contain spaces):</string>
    <string name="tv_user_spinner">Select a friend</string>
    <string name="tv_user_list_title">Friends:</string>
    <string name="tv_last_payment_title">Last</string>
    <string name="tv_spent_title">Spent</string>
    <string name="tv_paid_title">Paid</string>
    <string name="tv_sp_filter_title">Filter:</string>
    <string name="tv_sp_sort_title">Sort:</string>
    <string name="tv_paying_title">Who paid?</string>
    <string name="tv_payed_for_title">For who?</string>
    <string name="tv_equal_payment_text">Divide equally</string>
    <string name="tv_need_more_paid_for_title">Still to be paid for:</string>
    <string name="tv_need_more_paid_title">Still to be paid:</string>
    <string name="tv_no_repayments">The group is all squared up</string>
    <string name="tv_quick_action_type_title">Type</string>
    <string name="tv_quick_action_action_title">Action</string>
    <string name="tv_group_user_deleted">* Friend Deleted *</string>
    <string name="tv_quick_action_target_title">Target</string>
    <string name="quick_action_type_all_title">All</string>
    <string name="quick_action_type_user_title">Friend</string>
    <string name="quick_action_type_group_title">Group</string>
    <string name="quick_action_action_payment_add_title">New Payment</string>
    <string name="quick_action_action_view_specific_title">View</string>
    <string name="quick_action_action_view_all_title">View All</string>
    <string name="bt_popup_delete_positive">Yes</string>
    <string name="bt_popup_delete_negative">No</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_save">Save</string>
    <string name="bt_choose_photo">Take Photo</string>
    <string name="bt_ok">OK</string>
    <string name="bt_repay_selected">Repay Selected</string>
    <string name="bt_next">Next</string>
    <string name="bt_previous">Previous</string>
    <string name="bt_choose_target">Choose</string>
    <string name="bt_choose_target_user">Choose Friend</string>
    <string name="bt_choose_target_group">Choose Group</string>
    <string name="bt_widget_quick_add">New IOU</string>
    <string name="bt_new_user">New Friend</string>
    <string name="user_status_inactive">Inactive</string>
    <string name="user_status_active">Active</string>
    <string name="user_status_current">Current</string>
    <string name="user_status_favourite">Favourite</string>
    <string name="payment_type_loan">Loan</string>
    <string name="payment_type_repayment">Repayment</string>
    <string name="payment_direction_to_user">To Friend</string>
    <string name="payment_direction_from_user">From Friend</string>
    <string name="payment_direction_to_user_short">To</string>
    <string name="payment_direction_from_user_short">From</string>
    <string name="payment_type_db_loan_to_user">Loan to friend</string>
    <string name="payment_type_db_loan_from_user">Loan from friend</string>
    <string name="payment_type_db_payment_to_user">Payment to friend</string>
    <string name="payment_type_db_payment_from_user">Payment from friend</string>
    <string name="payment_title_repayment">Repayment</string>
    <string name="payment_title_part_repayment">Part Repayment</string>
    <string name="payment_description_repayment_all">All</string>
    <string name="group_repayment_title">Repayment</string>
	<string name="tv_popup_delete_payment">Are you sure you want to delete this payment?</string>
    <string name="tv_popup_delete_user">Are you sure you want to delete this friend?</string>
    <string name="tv_popup_delete_exit">Are you sure you want to exit?</string>
    <string name="tv_popup_delete_group">Are you sure you want to delete this group?</string>
    <string name="tv_popup_delete_quick_action">Are you sure you want to delete this quick action?</string>
	<string name="toast_user_exists">The friend already exists</string>
    <string name="toast_user_saved">Friend saved</string>
    <string name="toast_user_updated">Friends details updated</string>
    <string name="toast_user_deleted">Friend deleted</string>
    <string name="toast_user_saved_error">An error has occured and the friend was not saved.</string>
    <string name="toast_user_does_not_exist">The selected friend does not exist</string>
    <string name="toast_payment_saved">Payment saved</string>
	<string name="toast_payment_updated">Payment details updated</string>
    <string name="toast_payment_deleted">Payment deleted</string>
    <string name="toast_no_user_name">Please enter a friends name</string>
    <string name="toast_no_amount">Please enter an amount</string>
    <string name="rb_type_user_title">Friend</string>
    <string name="rb_type_group_title">Group</string>
    <string name="rb_action_view_all_title">View All</string>
    <string name="rb_action_view_specific_title">View</string>
    <string name="rb_action_payment_new_title">New Payment</string>
    <string name="thanks_title_design">Design</string>
    <string name="thanks_title_theme">Theme</string>
    <string name="thanks_title_actionbar">ActionBar</string>
    <string name="thanks_title_beta_testers">Beta Testers</string>
    <string name="thanks_rich_armstrong">All Designs (App, Icon, Promotional Images) by <a href="http://www.mrra.co">Rich Armstrong</a>.</string>
    <string name="thanks_actionbar_sherlock">Actionbar curtosy of the <a href="http://actionbarsherlock.com/">ActionBarSherlock</a> project.</string>
    <string name="thanks_holo_everywhere">Holo style Theme thanks to the <a href="https://github.com/ChristopheVersieux/HoloEverywhere">HoloEverywhere.</a> Project</string>
    <string name="thanks_beta_testers">In no particular order: \n\rAaron Jokhun, Grant Godsmark, Luke Siedle, Rose Clark, Stephen Pitchford, Eric Alan Solo, Mohamed Osman, Luke Holden, Oliver Rivett-Carnac</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_add_user">Add Friend</string>
    <string name="menu_add_payment">Add Payment</string>
    <string name="menu_edit_user">Edit</string>
    <string name="menu_delete_user">Delete</string>
    <string name="menu_send_email_reminder">Send Email reminder</string>
    <string name="menu_send_sms_reminder">Send SMS reminder</string>
    <string name="menu_notification_reminder">Set notification reminder</string>
    <string name="category_title_integration">Integration</string>
    <string name="category_title_about">About</string>
    <string name="category_title_general">General</string>
    <string name="category_title_notification">Notifications</string>
    <string name="category_title_email">Email</string>
    <string name="category_title_sms">SMS</string>
    <string name="pref_title_allow_min_text">Minimalistic Text</string>
    <string name="pref_title_about_min_text">Minimalistic Text</string>
    <string name="pref_title_email_reminders">Email Reminders</string>
    <string name="pref_title_email_subject">Default Email Subject</string>
    <string name="pref_title_email_body">Default Email body</string>
    <string name="pref_title_sms_reminders">Sms Reminder</string>
    <string name="pref_title_sms_body">Default sms body</string>
    <string name="pref_title_default_start_page">Start Page</string>
    <string name="pref_title_notification_reminders">Notification Reminders</string>
    <string name="pref_title_notification_reminder_persistent">Persistent Notification</string>
    <string name="pref_summary_allow_min_text">When checked, variables can be created to be used in Minimalistic Text</string>
    <string name="pref_summary_about_min_text">I have nothing to do with Minimalistic Text, I just think it\'s an amazing app and wanted to integrate with it. For more information click here to download it from Google Play</string>
    <string name="pref_summary_email_reminders">Gives you the option to send an email reminder to a friend</string>
    <string name="pref_summary_email_subject">The Default message subject that will be sent. This will be editable before the message is sent.</string>
    <string name="pref_summary_email_body" formatted="false">The Default message that will be sent. This will be editable before the message is sent. Use %FRIENDNAME and %BALANCE as variables for the friends name and friends balance respectively</string>
    <string name="pref_summary_sms_reminders">Gives you the option to send an sms reminder to a friend</string>
    <string name="pref_summary_sms_body" formatted="false">The Default message that will be sent. This will be editable before the message is sent. Use %FRIENDNAME and %BALANCE as variables for the friends name and friends balance respectively</string>
    <string name="pref_summary_default_start_page">Select the starting page, this will take effect the next time the app starts. The home dash will be disabled if it is not the home page</string>
    <string name="pref_summary_notification_reminders">Allows you to add a reminder to the notification bar</string>
    <string name="pref_summary_notification_reminder_persistent">Reminder Notifications will be persistent</string>
    <string name="pref_name_def_email_rem_body">Default Email Body</string>
    <string name="pref_name_def_email_rem_sub">Default Email Subject</string>
    <string name="pref_name_def_sms_rem_body">Default SMS Body</string>
    <string name="default_email_reminder_body" formatted="false">Dear %FRIENDNAME, You owe me %BALANCE. Please pay me as soon as you can.</string>
    <string name="default_email_reminder_subject">Please Pay</string>
    <string name="default_sms_reminder_body" formatted="false">Dear %FRIENDNAME, You owe me %BALANCE. Please pay me as soon as you can.</string>
</resources>