<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingLeft="5dip"
	    android:paddingRight="5dip"
	    android:paddingBottom="5dip">
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_title_design"
	        style="@style/heading"
	        android:paddingTop="5dip">
		</TextView>
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_rich_armstrong"
	        android:id="@+id/tv_rich_armstrong">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_title_actionbar"
	        style="@style/heading"
	        android:paddingTop="5dip">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_actionbar_sherlock"
	        android:id="@+id/tv_actionbar_sherlock">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_title_theme"
	        style="@style/heading"
	        android:paddingTop="5dip">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_holo_everywhere"
	        android:id="@+id/tv_holo_everywhere">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_title_beta_testers"
	        style="@style/heading"
	        android:paddingTop="5dip">
		</TextView>
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/thanks_beta_testers"
	        android:id="@+id/tv_beta_testers">
		</TextView>
	</LinearLayout>
</ScrollView>