<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
   	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="1.0"
		android:id="@+id/ll_controls"
		android:layout_alignParentBottom="true">
	  	<Button
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:id="@+id/bt_cancel"
	  		android:text="@string/bt_cancel"
	  		android:layout_weight="0.5">
	  	</Button>
		<Button
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:id="@+id/bt_save"
	  		android:text="@string/bt_save"
	  		android:layout_weight="0.5"
	  		android:enabled="false">
	  	</Button>
	</LinearLayout>
    
   	<ScrollView
   	    android:layout_width="fill_parent"
   	    android:layout_height="fill_parent"
   	    android:layout_alignParentTop="true"
   	    android:layout_above="@id/ll_controls">
   	    <LinearLayout
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:orientation="vertical">
   	        
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/quick_action_type_title"
		        style="@style/heading">
		    </TextView>
		    
		    <RadioGroup 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:weightSum="1.0">
		        <RadioButton 
		            android:text="@string/rb_type_user_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/rb_type_user"
		            android:layout_weight="0.5">
		        </RadioButton>
		        <RadioButton 
		            android:text="@string/rb_type_group_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/rb_type_group"
		            android:layout_weight="0.5">
		        </RadioButton>
		    </RadioGroup>
		    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/quick_action_action_title"
		        style="@style/heading">
		    </TextView>
		    
			<RadioGroup 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:weightSum="1.0">
		        <RadioButton 
		            android:text="@string/rb_action_view_all_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/rb_action_view_all"
		            android:layout_weight="0.5">
		        </RadioButton>
		        <RadioButton 
		            android:text="@string/rb_action_view_specific_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/rb_action_view_specific"
		            android:layout_weight="0.5">
		        </RadioButton>
		        <RadioButton 
		            android:text="@string/rb_action_payment_new_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:id="@+id/rb_action_payment_new"
		            android:layout_weight="0.5">
		        </RadioButton>
		    </RadioGroup>   
		    
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/tv_target_title"
			    android:text="@string/tv_no_target">
			</TextView>
			
			<Button
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:id="@+id/bt_choose_target"
			    android:text="@string/bt_choose_target"
			    android:enabled="false">
			</Button>	        
   	    </LinearLayout>
   	</ScrollView>
</RelativeLayout>