<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true">
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="none"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" 
		    android:layout_marginTop="10dip">
			<EditText
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:id="@+id/et_payment_title"
		        android:hint="@string/et_payment_title_hint"
		        android:singleLine="true"
		        android:inputType="textCapSentences"
		        android:layout_marginTop="10dip">
		    </EditText>
		    <EditText
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:id="@+id/et_payment_description"
		        android:hint="@string/et_payment_description_hint"
		        android:singleLine="false"
			    android:minLines="3"
			    android:maxLines="4"
			    android:scrollbars="vertical"
			    android:inputType="textCapSentences|textMultiLine"
			    android:layout_marginTop="10dip">
		    </EditText>
		    <EditText
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:id="@+id/et_payment_date"
		        android:hint="@string/et_payment_date_hint"
		        android:layout_marginTop="10dip"
		        android:focusable="false">
		    </EditText>
		   	<TextView
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:text="@string/tv_paying_title"
		        android:layout_marginTop="10dip">
		    </TextView>
		    <LinearLayout
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/ll_paying_wrapper"
		    	android:orientation="vertical">
		    </LinearLayout>
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:id="@+id/tv_paying_total"
		        	android:text="0.00"
		        	android:layout_alignParentRight="true">
		        </TextView>
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:text="@string/tv_total_title"
		        	android:layout_alignParentLeft="true"
		        	android:layout_toLeftOf="@id/tv_paying_total">
		        </TextView>
		    </RelativeLayout>
   			<RelativeLayout 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip">
			    <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_equal_payment_text"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true">
				</TextView>
				<ToggleButton
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/tb_equal_payment"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true">
				</ToggleButton>
			</RelativeLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/ll_paid_for_section_wrapper"
			    android:orientation="vertical">"
				<TextView
			        android:layout_height="wrap_content"
			        android:layout_width="fill_parent"
			        android:text="@string/tv_payed_for_title">
			    </TextView>
			    <LinearLayout
			        android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/ll_paid_for_wrapper"
			    	android:orientation="vertical">
			    </LinearLayout>    
			</LinearLayout>
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip">
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:id="@+id/tv_paid_for_total"
		        	android:text="0.00"
		        	android:layout_alignParentRight="true">
		        </TextView>
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:text="@string/tv_total_title"
		        	android:id="@+id/tv_paid_for_total_title"
		        	android:layout_alignParentLeft="true"
		        	android:layout_toLeftOf="@id/tv_paid_for_total">
		        </TextView>
		    </RelativeLayout>
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:id="@+id/tv_difference_amount"
		        	android:layout_alignParentRight="true">
		        </TextView>
		        <TextView 
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:id="@+id/tv_difference_amount_title"
		        	android:layout_alignParentLeft="true"
		        	android:layout_toLeftOf="@id/tv_difference_amount">
		        </TextView>
		    </RelativeLayout>
		    <LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="1.0">
			  	<Button
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content"
			  		android:id="@+id/bt_cancel"
			  		android:text="@string/bt_cancel"
			  		android:layout_weight="0.5">
			  	</Button>
			  	<Button
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content"
			  		android:id="@+id/bt_save"
			  		android:text="@string/bt_save"
			  		android:layout_weight="0.5">
			  	</Button>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>